Port von 1.21.1 nach 1.20.1, NeoForge-Modul auf Forge umgestellt
Die Hooks stimmen mit 1.21.1 ueberein: populateTags, findTexture, getHatType,
VillagerProfession mit String-id, VillagerData mit Objekten. Neu ist das Netz.

1.20.1 kennt weder CustomPayload noch PacketCodec. Die sechs Payloads sind jetzt
Records hinter einem Payload-Interface: Kanal-Id und Schreiber am Record, Leser als
statische Methode daneben. Gesendet und empfangen wird ueber Architectury's
NetworkManager, damit faellt die ExpectPlatform-Schicht fuer Netz auf beiden
Loadern weg. Gelesen wird auf dem Netz-Thread vor der Freigabe des Puffers, die
Arbeit wird eingereiht.

Forge statt NeoForge: mods.toml ohne Mixin-Block (Forge liest die Config aus dem
Manifest, loom traegt sie ein), FMLJavaModLoadingContext und MinecraftForge-Bus,
FMLPaths und ModList aus net.minecraftforge. Der handgeschriebene Access
Transformer ist raus, weil loom ihn auf Forge selbst aus dem Widener baut und
sonst mit FileAlreadyExists abbricht. MixinExtras liegt als jarJar im Jar, Forge
bringt es nicht mit.

Java 17: Mixin-compatibilityLevel, options.release, getFirst und getLast der
Listen ersetzt. Dazu GlobalPos-Getter, getUuidAsString, LootManager statt
Loot-Registry, NbtIo mit File, Identifier-Konstruktor statt ofVanilla.

Loom 1.11 statt 1.7: 1.7 laeuft nicht auf Gradle 8.14.

118 Tests gruen, beide Jars gebaut.